src/tests/cases/snapshots/excise__tests__cases__ui__eleven_files-2.snap
---
source: src/tests/cases/ui.rs
expression: normalized
---
 EXCISE  /tmp/excise_tests/eleven_files  ◆ COMPLETE                                                                                                                                           
 allocated ###.#K   reclaim ###.#K   apparent 448.0K   11 entries                                                                                                                             
──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ STORAGE MAP ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ INSPECT ─────────────────────────┐
│┌─────────────────────────────────────────────────────────────────────────────────────┬─────────────────────────────────────────────────────────────────┤│Select an entry for identity,     │
││                                                                                     │                                                                 ││bounds, state, and actions.       │
││                                                                                     │                                                                 ││                                  │
││                                                                                     │                                                                 ││                                  │
││                                                                                     │                              file6                              ││                                  │
││                                                                                     │                                                                 ││                                  │
││                                                                                     │                                                                 ││                                  │
││                                                                                     │                           52.0K (12%)                           ││                                  │
││                                                                                     │                                                                 ││                                  │
││                                                                                     │                                                                 ││                                  │
││                                                                                     │                                                                 ││                                  │
││                                        file7                                        ├─────────────────────────────────────────────────────────────────┤│                                  │
││                                                                                     │                                                                 ││                                  │
││                                                                                     │                                                                 ││                                  │
││                                    148.0K (33%)                                     │                                                                 ││                                  │
││                                                                                     │                                                                 ││                                  │
││                                                                                     │                              file8                              ││                                  │
││                                                             ╔ EXIT ════════════════════════════════════════════════════════╗                          ││                                  │
││                                                             ║                                                              ║                          ││                                  │
││                                                             ║                         Quit Excise?                         ║                          ││                                  │
││                                                             ║                  [y] quit    [Esc/q/n] back                  ║                          ││                                  │
││                                                             ║                                                              ║                          ││                                  │
││                                                             ║                                                              ║                          ││                                  │
││                                                             ║                                                              ║──────────────────────────┤│                                  │
││                                                             ╚══════════════════════════════════════════════════════════════╝         file1            ││                                  │
│├─────────────────────────────────────────────────────────────────────────────────────┤                                    │                            ││                                  │
││                                                                                     │                                    │         8.0K (2%)          ││                                  │
││                                                                                     │                                    ├────────────────────────────┤│                                  │
││                                       file10                                        │                                    │           file2            ││                                  │
││                                                                                     │                                    │                            ││                                  │
││                                                                                     │                                    │         8.0K (2%)          ││                                  │
││                                     52.0K (12%)                                     │                                    ├────────────────────────────┤│                                  │
││                                                                                     │               file9                │           file3            ││                                  │
││                                                                                     │                                    │                            ││                                  │
│├─────────────────────────────────────────────────────────────────────────────────────┤            52.0K (12%)             │         8.0K (2%)          ││                                  │
││                                                                                     │                                    ├────────────────────────────┤│                                  │
││                                                                                     │                                    │           file4            ││                                  │
││                                       file11                                        │                                    │                            ││                                  │
││                                                                                     │                                    │         8.0K (2%)          ││                                  │
││                                                                                     │                                    ├────────────────────────────┤│                                  │
││                                     52.0K (12%)                                     │                                    │           file5            ││                                  │
││                                                                                     │                                    │                            ││                                  │
││                                                                                     │                                    │         8.0K (2%)          ││                                  │
└┴─────────────────────────────────────────────────────────────────────────────────────┴────────────────────────────────────┴────────────────────────────┘└──────────────────────────────────┘
 / filter  arrows/Vim move  Enter open/rescan  Backspace delete  ? help  mem 96.0M/384.0M                                                                                                     
Excise · REDUCED MOTION
