src/tests/cases/snapshots/excise__tests__cases__ui__eleven_files.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 448.0K (11 files), freed: 0 | /tmp/excise_tests/eleven_files                                                                                                                          
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                         │                                                                                  │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                      file6                                       │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                   52.0K (12%)                                    │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                                                                  │
│                                                  file7                                                  ├──────────────────────────────────────────────────────────────────────────────────┤
│                                                                                                         │                                                                                  │
│                                                                                                         │                                                                                  │
│                                              148.0K (33%)                                               │                                                                                  │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                      file8                                       │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                   52.0K (12%)                                    │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                                                                  │
│                                                                                                         │                                                                                  │
│                                                                                                         ├──────────────────────────────────────────────┬───────────────────────────────────┤
│                                                                                                         │                                              │                                   │
│                                                                                                         │                                              │               file1               │
├─────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                              │             8.0K (2%)             │
│                                                                                                         │                                              │                                   │
│                                                                                                         │                                              ├───────────────────────────────────┤
│                                                                                                         │                                              │               file2               │
│                                                 file10                                                  │                                              │                                   │
│                                                                                                         │                                              │             8.0K (2%)             │
│                                               52.0K (12%)                                               │                                              ├───────────────────────────────────┤
│                                                                                                         │                    file9                     │               file3               │
│                                                                                                         │                                              │                                   │
│                                                                                                         │                 52.0K (12%)                  │             8.0K (2%)             │
├─────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                              ├───────────────────────────────────┤
│                                                                                                         │                                              │                                   │
│                                                                                                         │                                              │               file4               │
│                                                 file11                                                  │                                              │             8.0K (2%)             │
│                                                                                                         │                                              │                                   │
│                                                                                                         │                                              ├───────────────────────────────────┤
│                                               52.0K (12%)                                               │                                              │               file5               │
│                                                                                                         │                                              │                                   │
│                                                                                                         │                                              │             8.0K (2%)             │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────┴──────────────────────────────────────────────┴───────────────────────────────────┘
                                                                                                                                                                                              
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit                                                         

